<resources>
    <string name="app_name">DemoFinal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_alarm">Alarm</string>
    <string name="menu_message">Message</string>
    <string name="menu_phone">Phone</string>

    <string name="ed_phone">Enter your phone number</string>
    <string name="ed_sms">Enter your message</string>
    <string name="txt_time">Time setup</string>
</resources>