<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/ic_alarm"
            android:title="@string/menu_alarm" />
        <item
            android:id="@+id/nav_alarm_add"
            android:icon="@drawable/ic_alarm"
            android:title="@string/menu_alarm"/>
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/menu_message" />
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/ic_call"
            android:title="@string/menu_phone" />
    </group>
</menu>